# frontier-to-pit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml  release.yml
evals/: README.md  __init__.py
evals/lmeval/: __init__.py  __main__.py  backends.py  classify_forget.py  judge_leak.py
evals/lmeval/tasks/temporal/: covid.yaml  covid_nosystemprompt.yaml  ma.parquet  ma.yaml  ma_nosystemprompt.yaml  pharma.parquet  pharma.yaml  pharma_nosystemprompt.yaml  streamingqa.parquet  streamingqa.yaml  streamingqa_bradfordsystemprompt.yaml  streamingqa_forget_pool.parquet  streamingqa_longersystemprompt.yaml  utils.py
evals/lmeval/tasks/temporal/oos_check/: ma_2026_oos.py  ma_2026_oos_full.py
evals/scoring/: __init__.py  answer_match.py  firm_match.py  mc_extract.py
lm-evaluation-harness/: pyproject.toml
lm-evaluation-harness/lm_eval/models/: __init__.py
lm-evaluation-harness/lm_eval/tasks/humaneval/: utils.py
src/ftp/: __init__.py  config.py  core.py  engine.py  guard.py  paired.py  probe.py  prompts.py  serve.py  steering.py  steering_worker.py  translate.py  vllm.py
tests/: conftest.py  test_config.py  test_core.py  test_engine_cpu.py  test_engine_fused_cpu.py  test_engine_hybrid_cpu.py  test_engine_paged_cpu.py  test_engine_staging_cpu.py  test_guard.py  test_imports.py  test_mc_extract.py  test_paired_cpu.py  test_probe.py  test_prompts.py  test_serve_cpu.py  test_steering_cpu.py  test_translate_cpu.py  test_universal_cpu.py
tests/fixtures/flexllama/: __init__.py  configuration_flexllama.py  modeling_flexllama.py
tests/gpu/: conftest.py  test_aux_device.py  test_engine_compile.py  test_engine_fused.py  test_engine_groundtruth.py  test_engine_staggered.py  test_fuse_batched.py  test_steering_vllm.py  test_vllm_smoke.py  test_vllm_universal_smoke.py
